--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -24,10 +24,10 @@
   "model.cancel": "Cancel",
   "model.create": "Create",
   "settings.title": "Chat Settings",
-  "settings.preset": "Persona",
-  "settings.preset.custom": "Custom",
-  "settings.preset.delete": "Delete",
-  "settings.preset.deleteConfirm": "Delete this persona?",
+  "settings.persona": "Persona",
+  "settings.persona.custom": "Custom",
+  "settings.persona.delete": "Delete",
+  "settings.persona.deleteConfirm": "Delete this persona?",
   "settings.model": "Model",
   "settings.systemPrompt.placeholder": "Describe how the AI should talk or behave (blank for default)",
   "settings.vectorStoreId.label": "Vector Store ID (for RAG)",
@@ -35,8 +35,8 @@
   "settings.vectorStoreId.description": "When set, file search (RAG) is always used for every response",
   "settings.useContext": "Context Retention",
   "settings.useContext.description": "ON remembers conversation flow. OFF treats each message as independent",
-  "settings.saveAsPreset": "Save this setting as a persona",
-  "settings.presetName.placeholder": "Enter persona name",
+  "settings.saveAsPersona": "Save this setting as a persona",
+  "settings.personaName.placeholder": "Enter persona name",
   "settings.save": "Save",
   "header.model": "Model:",
   "header.customPrompt": "AI personality set",
@@ -55,25 +55,25 @@
   "error.chatDelete": "Failed to delete chat",
   "error.messageSend": "Failed to send message",
   "error.settingsSave": "Failed to save settings",
-  "presetManager.title": "Persona Manager",
-  "presetManager.add": "New Persona",
-  "presetManager.editTitle": "Edit Persona",
-  "presetManager.addTitle": "New Persona",
-  "presetManager.edit": "Edit",
-  "presetManager.delete": "Delete",
-  "presetManager.deleteConfirm": "Delete this persona?",
-  "presetManager.save": "Save",
-  "presetManager.cancel": "Cancel",
-  "presetManager.name": "Persona Name",
-  "presetManager.name.placeholder": "Enter persona name",
-  "presetManager.systemPrompt": "AI Personality",
-  "presetManager.systemPrompt.placeholder": "Describe how the AI should talk or behave (blank for default)",
-  "presetManager.vectorStoreId": "Vector Store ID (for RAG)",
-  "presetManager.vectorStoreId.placeholder": "vs_xxxxxxxxxxxxxxxx (blank to disable)",
-  "presetManager.image": "Image",
-  "presetManager.imageUpload": "Upload Image",
-  "presetManager.empty": "No personas",
-  "presetManager.close": "Close",
+  "personaManager.title": "Persona Manager",
+  "personaManager.add": "New Persona",
+  "personaManager.editTitle": "Edit Persona",
+  "personaManager.addTitle": "New Persona",
+  "personaManager.edit": "Edit",
+  "personaManager.delete": "Delete",
+  "personaManager.deleteConfirm": "Delete this persona?",
+  "personaManager.save": "Save",
+  "personaManager.cancel": "Cancel",
+  "personaManager.name": "Persona Name",
+  "personaManager.name.placeholder": "Enter persona name",
+  "personaManager.systemPrompt": "AI Personality",
+  "personaManager.systemPrompt.placeholder": "Describe how the AI should talk or behave (blank for default)",
+  "personaManager.vectorStoreId": "Vector Store ID (for RAG)",
+  "personaManager.vectorStoreId.placeholder": "vs_xxxxxxxxxxxxxxxx (blank to disable)",
+  "personaManager.image": "Image",
+  "personaManager.imageUpload": "Upload Image",
+  "personaManager.empty": "No personas",
+  "personaManager.close": "Close",
   "auth.placeholder": "Enter password",
   "auth.login": "Login",
   "auth.error": "Incorrect password",
