--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -24,10 +24,10 @@
   "model.cancel": "キャンセル",
   "model.create": "作成",
   "settings.title": "チャット設定",
-  "settings.preset": "ペルソナ",
-  "settings.preset.custom": "カスタム",
-  "settings.preset.delete": "削除",
-  "settings.preset.deleteConfirm": "このペルソナを削除しますか？",
+  "settings.persona": "ペルソナ",
+  "settings.persona.custom": "カスタム",
+  "settings.persona.delete": "削除",
+  "settings.persona.deleteConfirm": "このペルソナを削除しますか？",
   "settings.model": "モデル",
   "settings.systemPrompt.placeholder": "AIにどんな話し方や役割をさせたいか入力（空欄でデフォルト）",
   "settings.vectorStoreId.label": "Vector Store ID（RAG用）",
@@ -35,8 +35,8 @@
   "settings.vectorStoreId.description": "設定すると、毎回ファイル検索（RAG）を実行して回答します",
   "settings.useContext": "文脈保持",
   "settings.useContext.description": "ONにすると会話の流れを記憶します。OFFにすると毎回独立した質問として処理します",
-  "settings.saveAsPreset": "この設定をペルソナとして保存",
-  "settings.presetName.placeholder": "ペルソナ名を入力",
+  "settings.saveAsPersona": "この設定をペルソナとして保存",
+  "settings.personaName.placeholder": "ペルソナ名を入力",
   "settings.save": "保存",
   "header.model": "Model:",
   "header.customPrompt": "AIの性格設定あり",
@@ -55,25 +55,25 @@
   "error.chatDelete": "チャットの削除に失敗しました",
   "error.messageSend": "メッセージの送信に失敗しました",
   "error.settingsSave": "設定の保存に失敗しました",
-  "presetManager.title": "ペルソナ管理",
-  "presetManager.add": "新規ペルソナ",
-  "presetManager.editTitle": "ペルソナ編集",
-  "presetManager.addTitle": "ペルソナ新規作成",
-  "presetManager.edit": "編集",
-  "presetManager.delete": "削除",
-  "presetManager.deleteConfirm": "このペルソナを削除しますか？",
-  "presetManager.save": "保存",
-  "presetManager.cancel": "キャンセル",
-  "presetManager.name": "ペルソナ名",
-  "presetManager.name.placeholder": "ペルソナ名を入力",
-  "presetManager.systemPrompt": "AIの性格・ふるまい",
-  "presetManager.systemPrompt.placeholder": "AIにどんな話し方や役割をさせたいか入力（空欄でデフォルト）",
-  "presetManager.vectorStoreId": "Vector Store ID（RAG用）",
-  "presetManager.vectorStoreId.placeholder": "vs_xxxxxxxxxxxxxxxx（空欄で無効）",
-  "presetManager.image": "画像",
-  "presetManager.imageUpload": "画像アップロード",
-  "presetManager.empty": "ペルソナがありません",
-  "presetManager.close": "閉じる",
+  "personaManager.title": "ペルソナ管理",
+  "personaManager.add": "新規ペルソナ",
+  "personaManager.editTitle": "ペルソナ編集",
+  "personaManager.addTitle": "ペルソナ新規作成",
+  "personaManager.edit": "編集",
+  "personaManager.delete": "削除",
+  "personaManager.deleteConfirm": "このペルソナを削除しますか？",
+  "personaManager.save": "保存",
+  "personaManager.cancel": "キャンセル",
+  "personaManager.name": "ペルソナ名",
+  "personaManager.name.placeholder": "ペルソナ名を入力",
+  "personaManager.systemPrompt": "AIの性格・ふるまい",
+  "personaManager.systemPrompt.placeholder": "AIにどんな話し方や役割をさせたいか入力（空欄でデフォルト）",
+  "personaManager.vectorStoreId": "Vector Store ID（RAG用）",
+  "personaManager.vectorStoreId.placeholder": "vs_xxxxxxxxxxxxxxxx（空欄で無効）",
+  "personaManager.image": "画像",
+  "personaManager.imageUpload": "画像アップロード",
+  "personaManager.empty": "ペルソナがありません",
+  "personaManager.close": "閉じる",
   "auth.placeholder": "パスワードを入力",
   "auth.login": "ログイン",
   "auth.error": "パスワードが正しくありません",
