--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -24,10 +24,10 @@
   "model.cancel": "취소",
   "model.create": "만들기",
   "settings.title": "채팅 설정",
-  "settings.preset": "페르소나",
-  "settings.preset.custom": "커스텀",
-  "settings.preset.delete": "삭제",
-  "settings.preset.deleteConfirm": "이 페르소나를 삭제하시겠습니까?",
+  "settings.persona": "페르소나",
+  "settings.persona.custom": "커스텀",
+  "settings.persona.delete": "삭제",
+  "settings.persona.deleteConfirm": "이 페르소나를 삭제하시겠습니까?",
   "settings.model": "모델",
   "settings.systemPrompt.placeholder": "AI에게 어떤 말투나 역할을 원하는지 입력 (빈칸이면 기본값)",
   "settings.vectorStoreId.label": "Vector Store ID (RAG용)",
@@ -35,8 +35,8 @@
   "settings.vectorStoreId.description": "설정하면 매번 파일 검색(RAG)을 실행하여 답변합니다",
   "settings.useContext": "컨텍스트 유지",
   "settings.useContext.description": "ON이면 대화 흐름을 기억합니다. OFF이면 매번 독립적인 질문으로 처리합니다",
-  "settings.saveAsPreset": "이 설정을 페르소나로 저장",
-  "settings.presetName.placeholder": "페르소나 이름 입력",
+  "settings.saveAsPersona": "이 설정을 페르소나로 저장",
+  "settings.personaName.placeholder": "페르소나 이름 입력",
   "settings.save": "저장",
   "header.model": "Model:",
   "header.customPrompt": "AI 성격 설정됨",
@@ -55,25 +55,25 @@
   "error.chatDelete": "채팅 삭제에 실패했습니다",
   "error.messageSend": "메시지 전송에 실패했습니다",
   "error.settingsSave": "설정 저장에 실패했습니다",
-  "presetManager.title": "페르소나 관리",
-  "presetManager.add": "새 페르소나",
-  "presetManager.editTitle": "페르소나 편집",
-  "presetManager.addTitle": "페르소나 새로 만들기",
-  "presetManager.edit": "편집",
-  "presetManager.delete": "삭제",
-  "presetManager.deleteConfirm": "이 페르소나를 삭제하시겠습니까?",
-  "presetManager.save": "저장",
-  "presetManager.cancel": "취소",
-  "presetManager.name": "페르소나 이름",
-  "presetManager.name.placeholder": "페르소나 이름 입력",
-  "presetManager.systemPrompt": "AI 성격·행동",
-  "presetManager.systemPrompt.placeholder": "AI에게 어떤 말투나 역할을 원하는지 입력 (빈칸이면 기본값)",
-  "presetManager.vectorStoreId": "Vector Store ID (RAG용)",
-  "presetManager.vectorStoreId.placeholder": "vs_xxxxxxxxxxxxxxxx (빈칸이면 비활성)",
-  "presetManager.image": "이미지",
-  "presetManager.imageUpload": "이미지 업로드",
-  "presetManager.empty": "페르소나가 없습니다",
-  "presetManager.close": "닫기",
+  "personaManager.title": "페르소나 관리",
+  "personaManager.add": "새 페르소나",
+  "personaManager.editTitle": "페르소나 편집",
+  "personaManager.addTitle": "페르소나 새로 만들기",
+  "personaManager.edit": "편집",
+  "personaManager.delete": "삭제",
+  "personaManager.deleteConfirm": "이 페르소나를 삭제하시겠습니까?",
+  "personaManager.save": "저장",
+  "personaManager.cancel": "취소",
+  "personaManager.name": "페르소나 이름",
+  "personaManager.name.placeholder": "페르소나 이름 입력",
+  "personaManager.systemPrompt": "AI 성격·행동",
+  "personaManager.systemPrompt.placeholder": "AI에게 어떤 말투나 역할을 원하는지 입력 (빈칸이면 기본값)",
+  "personaManager.vectorStoreId": "Vector Store ID (RAG용)",
+  "personaManager.vectorStoreId.placeholder": "vs_xxxxxxxxxxxxxxxx (빈칸이면 비활성)",
+  "personaManager.image": "이미지",
+  "personaManager.imageUpload": "이미지 업로드",
+  "personaManager.empty": "페르소나가 없습니다",
+  "personaManager.close": "닫기",
   "auth.placeholder": "비밀번호 입력",
   "auth.login": "로그인",
   "auth.error": "비밀번호가 올바르지 않습니다",
