--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -71,7 +71,9 @@
   "personaManager.vectorStoreId": "Vector Store ID（RAG用）",
   "personaManager.vectorStoreId.placeholder": "vs_xxxxxxxxxxxxxxxx（空欄で無効）",
   "personaManager.image": "画像",
-  "personaManager.imageUpload": "画像アップロード",
+  "personaManager.imageUpload": "アップロード",
+  "personaManager.aiImage.needName": "画像を生成するにはペルソナ名を入力してください",
+  "personaManager.aiImage.error": "画像の生成に失敗しました",
   "personaManager.empty": "ペルソナがありません",
   "personaManager.close": "閉じる",
   "auth.placeholder": "パスワードを入力",
