--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -8,7 +8,8 @@
   "account.login": "Login",
   "account.create": "Create",
   "account.processing": "Processing...",
-  "sidebar.newChat": "New Chat",
+  "sidebar.newChat": "New",
+  "sidebar.newDiary": "New",
   "sidebar.deleteChat.confirm": "Delete this chat?",
   "chat.input.placeholder": "Enter message...",
   "chat.input.send": "Send",
@@ -51,7 +52,7 @@
   "nav.prevQuestion": "Previous question",
   "nav.nextQuestion": "Next question",
   "nav.chat": "Chat",
-  "nav.diary": "Voice Diary",
+  "nav.diary": "Diary",
   "nav.mindmap": "Mind Map",
   "error.chatCreate": "Failed to create chat",
   "error.chatDelete": "Failed to delete chat",
@@ -82,6 +83,7 @@
   "auth.login": "Login",
   "auth.error": "Incorrect password",
   "diary.startRecording": "Start Recording",
+  "diary.complete": "Done",
   "diary.stopRecording": "Stop Recording",
   "diary.transcribing": "Transcribing...",
   "diary.empty": "No diary entries yet",
