--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -8,7 +8,8 @@
   "account.login": "ログイン",
   "account.create": "作成",
   "account.processing": "処理中...",
-  "sidebar.newChat": "新規チャット",
+  "sidebar.newChat": "新規作成",
+  "sidebar.newDiary": "新規作成",
   "sidebar.deleteChat.confirm": "このチャットを削除しますか?",
   "chat.input.placeholder": "メッセージを入力...",
   "chat.input.send": "送信",
@@ -51,7 +52,7 @@
   "nav.prevQuestion": "前の質問へ",
   "nav.nextQuestion": "次の質問へ",
   "nav.chat": "チャット",
-  "nav.diary": "音声日記",
+  "nav.diary": "日記",
   "nav.mindmap": "心の地図",
   "error.chatCreate": "チャットの作成に失敗しました",
   "error.chatDelete": "チャットの削除に失敗しました",
@@ -82,6 +83,7 @@
   "auth.login": "ログイン",
   "auth.error": "パスワードが正しくありません",
   "diary.startRecording": "録音開始",
+  "diary.complete": "完了",
   "diary.stopRecording": "録音停止",
   "diary.transcribing": "文字起こし中...",
   "diary.empty": "まだ日記がありません",
