--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -8,7 +8,8 @@
   "account.login": "로그인",
   "account.create": "만들기",
   "account.processing": "처리 중...",
-  "sidebar.newChat": "새 채팅",
+  "sidebar.newChat": "새로 만들기",
+  "sidebar.newDiary": "새로 만들기",
   "sidebar.deleteChat.confirm": "이 채팅을 삭제하시겠습니까?",
   "chat.input.placeholder": "메시지 입력...",
   "chat.input.send": "보내기",
@@ -51,7 +52,7 @@
   "nav.prevQuestion": "이전 질문으로",
   "nav.nextQuestion": "다음 질문으로",
   "nav.chat": "채팅",
-  "nav.diary": "음성일기",
+  "nav.diary": "일기",
   "nav.mindmap": "마음의 지도",
   "error.chatCreate": "채팅 생성에 실패했습니다",
   "error.chatDelete": "채팅 삭제에 실패했습니다",
@@ -82,6 +83,7 @@
   "auth.login": "로그인",
   "auth.error": "비밀번호가 올바르지 않습니다",
   "diary.startRecording": "녹음 시작",
+  "diary.complete": "완료",
   "diary.stopRecording": "녹음 중지",
   "diary.transcribing": "텍스트 변환 중...",
   "diary.empty": "아직 일기가 없습니다",
